Serializacja V4